# cookiecutter-pytemplate

./: LICENSE  README.md  cookiecutter.json  create_demo.py  invoke.py  pyproject.toml  pytest.ini
demo-project/: .cookie_cutter.json  pyproject.toml
demo-project/demo_project/: __init__.py
hooks/: post_gen_project.py
tests/: test_tasks.py
{{cookiecutter.project_name}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.py  tasks.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
