[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "demo-project"
description = "A demo project"
version = "0.1.0"
authors = ["Nathan Hunt <neighthan.hunt@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/neighthan/demo-project"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
twine = "^1.13"
