[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.description}}"
version = "0.1.0"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"
{%- if cookiecutter.github_username %}
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"
{%- endif %}

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
twine = "^1.13"
{%- if cookiecutter.include_invoke_tasks == "y" %}
cookiecutter = "^1.6"
invoke = "^1.2"
{%- endif %}
